Add MILESTONE 1: markup statico

--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carosello Mono Array</title>
+    <!-- Font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
+    <!-- /Font-awesome --> 
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="items">
+            <!-- MILESTONE 1: markup statico -->
+            <div class="box-item active">
+                <img src="img/01.jpg" alt="">
+            </div>
+            <div class="box-item">
+                <img src="img/02.jpg" alt="">
+            </div>
+            <div class="box-item">
+                <img src="img/03.jpg" alt="">
+            </div>
+            <div class="box-item">
+                <img src="img/04.jpg" alt="">
+            </div>
+            <div class="box-item">
+                <img src="img/05.jpg" alt="">
+            </div>
+            <div class="previous"><i class="fa-solid fa-chevron-up"></i></div>
+            <div class="next"><i class="fa-solid fa-chevron-down"></i></div>
+            <!-- /MILESTONE 1: markup statico -->
+        </div>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
