--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="items">
             <!-- MILESTONE 1: markup statico -->
-            <div class="box-item active">
+            <!-- <div class="box-item active">
                 <img src="img/01.jpg" alt="">
             </div>
             <div class="box-item">
@@ -28,7 +28,7 @@
             </div>
             <div class="box-item">
                 <img src="img/05.jpg" alt="">
-            </div>
+            </div> -->
             <div class="previous"><i class="fa-solid fa-chevron-up"></i></div>
             <div class="next"><i class="fa-solid fa-chevron-down"></i></div>
             <!-- /MILESTONE 1: markup statico -->
